# Error_404

./: .gitignore  FRONTEND_API_GUIDE.md  README.md  add_team_data.py  api.py  main.py  pyproject.toml  requirements.txt  test_api.py  test_complete_flow.py  test_direct_extraction.py  test_parser.py  test_skills.py  🎯 REVISED STEP-BY-STEP IMPLEMENTAT.txt
app/: database.py  models.py  schemas.py
app/data/: fallback_courses.json  healthcare_skills.json  roadmaps.json
app/data/course_cache/: cloud_engineer.json  data-analysis.json  data_analyst.json  data_science.json  deep_learning.json  dl.json  healthcare-data.json  healthcare_data_analyst.json  less.json  machine-learning.json  machine_learning.json  nlp.json  pandas.json  python.json  pytorch.json  sql.json  tensorflow.json
app/data/github_cache/: HarshPanchal2401?tab=repositories_repos.json  HarshPanchal2401_repos.json  yugvgchauhan_repos.json
app/routers/: __init__.py  analysis.py  courses.py  dependencies.py  jobs.py  projects.py  resume.py  roadmaps.py  skills.py  users.py
app/services/: course_recommender.py  gap_analyzer.py  github_analyzer.py  job_skill_analyzer.py  linkedin_job_fetcher.py  llm_skill_extractor.py  resume_parser.py  resume_test.py  skill_extractor.py
frontend/: package-lock.json  package.json  tailwind.config.js
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/dashboard/: page.tsx
frontend/src/app/domains/: page.tsx
frontend/src/app/login/: page.tsx
frontend/src/app/onboarding/: page.tsx
frontend/src/lib/: api.tsx  auth.tsx
(+6 files in other folders)
