[project]
name = "error-404"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "docx>=0.2.4",
    "fastapi>=0.128.0",
    "pymupdf>=1.26.0",
    "http-client>=0.1.22",
    "huggingface-hub>=1.3.2",
    "numpy>=2.4.1",
    "pandas>=2.3.3",
    "pydantic[email]>=2.12.5",
    "pypdf2>=3.0.1",
    "python-docx>=1.2.0",
    "python-dotenv>=1.2.1",
    "python-multipart>=0.0.21",
    "requests>=2.32.5",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "spacy>=3.8.11",
    "sqlalchemy>=2.0.45",
    "uvicorn>=0.40.0",
]
